[gd_scene load_steps=8 format=2]

[ext_resource path="res://Models/Zepllin.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/Camera.gd" type="Script" id=2]
[ext_resource path="res://UI/CandraFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Script/make_stack.gd" type="Script" id=4]
[ext_resource path="res://Script/Pause.gd" type="Script" id=5]
[ext_resource path="res://SceneBase.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/NinePanelGray.png" type="Texture" id=7]

[node name="Scene" type="Spatial"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 22.3216, 13.3472 )
script = ExtResource( 2 )

[node name="Cylinder" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 5 )

[node name="PausePanel" type="Control" parent="Control"]
pause_mode = 2
anchor_left = -12.275
anchor_top = -6.975
anchor_right = 13.25
anchor_bottom = 8.05
margin_left = 3.05176e-05
margin_right = -6.10352e-05

[node name="ColorRect2" type="NinePatchRect" parent="Control/PausePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -506.0
margin_top = -295.0
margin_right = -13.0
margin_bottom = -180.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource( 7 )
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="ColorRect3" type="NinePatchRect" parent="Control/PausePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -522.0
margin_top = 179.0
margin_right = 520.0
margin_bottom = 307.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource( 7 )
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="ColorRect" type="NinePatchRect" parent="Control/PausePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.0
margin_top = -117.0
margin_right = 184.0
margin_bottom = 107.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource( 7 )
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="Title" type="Label" parent="Control/PausePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -476.0
margin_top = -280.0
margin_right = -306.0
margin_bottom = -254.0
rect_scale = Vector2( 2.5, 2.5 )
custom_fonts/font = ExtResource( 3 )
text = "Color Captain"

[node name="Version" type="Label" parent="Control/PausePanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -452.0
margin_top = -216.0
margin_right = -351.0
margin_bottom = -202.0
rect_scale = Vector2( 1.4, 1.4 )
text = "Example of HSL beta"

[node name="RichTextLabel" type="RichTextLabel" parent="Control/PausePanel"]
anchor_left = 0.092
anchor_right = 0.202
margin_left = -156.0
margin_top = -45.0
margin_right = 164.0
margin_bottom = 30.0
custom_fonts/mono_font = ExtResource( 3 )
text = "This Scene is meant to represent a HSL color space. It still needs some work but feel free to explore."

[node name="Navigation_Instrustions" type="Label" parent="Control/PausePanel"]
anchor_left = 0.227
anchor_top = 1.0
anchor_right = 0.652
anchor_bottom = 1.106
margin_left = -498.0
margin_top = 209.0
margin_right = 302.0
margin_bottom = 322.0
custom_fonts/font = ExtResource( 3 )
text = "W - Move Forward  S - Move  Backward        Use the mouse to look around
A - Move Left  D - Move Right                                 You can move forward with 
                                                                                              The right mouse button 
"

[node name="Version2" type="Label" parent="Control/PausePanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -500.0
margin_top = 269.0
margin_right = -232.0
margin_bottom = 283.0
rect_scale = Vector2( 1.4, 1.4 )
text = "Designed and programmed by Max Tayler "

[node name="PlayButton" type="Button" parent="Control/PausePanel"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -98.0
margin_bottom = -78.0
rect_scale = Vector2( 2, 2 )
text = "Play "

[node name="BackButton" type="Button" parent="Control/PausePanel"]
margin_left = -39.0001
margin_top = 62.0
margin_right = 43.9999
margin_bottom = 83.0
text = "Main Menu"

[node name="GameUI" type="Control" parent="Control"]
anchor_left = -12.3
anchor_top = -6.957
anchor_right = 13.3
anchor_bottom = 7.95
margin_top = -0.720001

[node name="Label" type="Label" parent="Control/GameUI"]
margin_left = 427.0
margin_top = -285.28
margin_right = 490.0
margin_bottom = -271.28
text = "P - Pause "

[node name="Base" parent="." instance=ExtResource( 6 )]
transform = Transform( 42.8921, 0, 0, 0, 2.00761, 0, 0, 0, 42.8921, 0, -6, 0 )

[node name="Zepllin" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.913487, 0, -8.74228e-08, 0, 0.913487, 0, 7.98596e-08, 0, -1, 0, 30, -31 )

[connection signal="button_down" from="Control/PausePanel/PlayButton" to="Control" method="_on_PlayButton_button_down"]
[connection signal="button_up" from="Control/PausePanel/BackButton" to="Control" method="_on_Button_button_up"]
